ts-exporter/overlays/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-exporter
spec:
  replicas: 2
