ts-exporter/overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-exporter
spec:
  rules:
    - host: ts-exporter.k8s.moody
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ts-exporter
                port:
                  number: 5000
